Move title to front to fix blurring title on mobile.

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     top: 0;
     left: 50%;
     transform: translate(-50%,0);
-    z-index: 999;
+    z-index: 10;
     background-color: rgba(255, 255, 255, 0.301);
     background-image: linear-gradient(to bottom, white, white, rgba(255, 255, 255, 0));
     width: 100%;
@@ -58,7 +58,7 @@ body{
     width: 100%;
     transition: ease-in-out .3s;
     opacity : 1;
-    z-index: 5;
+    z-index: 11;
 }
 
 @media (max-width:400px) {
